# retailcrm_project

./: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  customers.py  orders.py  payments.py
app/core/: config.py
app/schemas/: __init__.py  customers.py  orders.py  payments.py
app/services/: __init__.py  retailcrm.py
